[package]
name = "vong"
authors = [
  "Aaron Rinehart <aaron.rinehart1@gmail.com>",
  "Sebastian J. Hamel <sebjfk@gmail.com>",
  "Spencer C. Imbleau <spencer@imbleau.com>",
]
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "png",
] }
image = "0.24"
winit = "0.28"
bevy-vello = { git = "https://github.com/vectorgameexperts/bevy-vello", version = "0.3", features = [
  "debug",
] }
bevy_rapier2d = { version = "0.23", features = ["debug-render-2d"] }
dolly = "0.4"

lyon_geom = "1.0"
lyon_tessellation = "1.0"
lyon_path = "1.0"
svgtypes = "0.9"
copyless = "0.1"
roxmltree = "0.13"
