[package]
name = "vong"
authors = [
  "Aaron Rinehart <aaron.rinehart1@gmail.com>",
  "Sebastian J. Hamel <sebjfk@gmail.com>",
  "Spencer C. Imbleau <spencer@imbleau.com>",
]
version = "0.2.0"
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[dependencies]
bevy = { version = "0.14.0", default-features = true }
image = "0.25.1"
bevy_vello = { git = "https://github.com/linebender/bevy_vello", branch = "bevy-0.14", features = [
  "svg",
] }
bevy_rapier2d = { version = "0.27.0-rc.1", features = ["debug-render-2d"] }
dolly = "0.4.3"
usvg = "0.33"
webgpu_check = "0.1.2"
replace_html = "0.1.0"

lyon_geom = "1.0"
lyon_tessellation = "1.0"
lyon_path = "1.0"
svgtypes = "0.9"
copyless = "0.1"
roxmltree = "0.13"
